# diffeo

./: .gitignore  LICENSE
baxter_to_pose/: CMakeLists.txt
baxter_to_pose/dataSet/: ballthrowing  goingtothecolumn  goingtothecube  totheball
baxter_to_pose/src/: gripper_control.cpp  real_baxter_arm_diffeomorphism.cpp  real_baxter_arm_simple_diffeomorphism.cpp
baxter_to_pose/taking_cube_to_column/: the_move
cpp/: CMakeLists.txt  FileVector.h  diffeoClean.hpp  diffeoMethods.hpp  diffeoMovements.hpp  diffeoPy.hpp  diffeoSearch.hpp  main.cpp  parameterisations.hpp  thingsThatShouldExist.hpp
dataSet/: Angle  BendedLine  CShape  DoubleBendedLine  GShape  JShape  JShape_2  Khamesh  LShape  Leaf_1  Leaf_2  Line  NShape  PShape  RShape  Saeghe  Sharpc  Sine  Snake  Spoon  Sshape  Trapezoid  WShape  Worm  Zshape  carlos  carlosScaling  goodmove  goodmoveTime  heee  takingCube  takingCubeTime
parameters/: diffeoPars.xml
python/: README.txt  diffeoPlotUtils.py  diffeoPy.pyx  doCompile.sh  exampleCarlos.py  exampleCarlosPyEigen.py  exampleDiffeo.py  setup.py
